Added RabbitMQ, Celery, Supervisor, and django apps for them so that server running is one command and is easily daemonized and monitored.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ $RECYCLE.BIN/
 # Operating System Files
 # =========================
 
+.pid
+
 # OSX
 # =========================
 
@@ -54,3 +56,4 @@ __pycache__/
 local_settings.py
 .env
 db.sqlite3
+
