--- a/moodtracker/requirements.txt
+++ b/moodtracker/requirements.txt
@@ -1,17 +1,32 @@
+amqp==2.2.2
+argh==0.26.2
 asn1crypto==0.23.0
+billiard==3.5.0.3
+celery==4.1.0
 certifi==2017.7.27.1
 cffi==1.11.2
 chardet==3.0.4
 cryptography==2.1.3
 Django==1.11.6
+django-celery-beat==1.1.0
+django-celery-results==1.0.1
+django-supervisor==0.4.0
 enum34==1.1.6
+ephem==3.7.6.0
 idna==2.6
 ipaddress==1.0.18
+kombu==4.1.0
+meld3==1.0.2
+pathtools==0.1.2
 pycparser==2.18
 PyJWT==1.5.3
 pyOpenSSL==17.3.0
 pytz==2017.2
+PyYAML==3.12
 requests==2.18.4
 six==1.11.0
+supervisor==3.3.3
 twilio==6.8.3
 urllib3==1.22
+vine==1.1.4
+watchdog==0.8.3
